home-info/templates/service.yml
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: v1
kind: Service
metadata:
  name: home-info
  namespace: home-info
  labels: #@ labels("svc")
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector: #@ labels("dashboard")
