home-info/templates/httproute.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yaml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-info
  namespace: home-info
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: home-info
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "home-info." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: home-info
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
